tests/snapshots/render__dependabot_menu_overlay_shown.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌──┐┌ octo-org/repo-charlie  newest ───────────────────────────────▲┌ repo-charlie #2628 ──────────────────────────┐"
"│ ││ ││                                    ±                    █│Fix panic when list is empty                  │"
"│o ││r ││▶ #2628 by @user-01            0  · ·                6mo    2w█│@user-01  fix/handler-panic-on-missing-config…│"
"│c ││e ││      Fix panic when list is empty                           █│  Overview   Activity   Commits   Checks  │"
"│t ││p ││  #2625 by @user-02            0  · ·                45m    2y█│┌  Overview ────────────────────────────────┐│"
"│o ││o ││      Add keyboard navigation to sidebar                     █││Summary                                     ││"
"│- ││- ││  #2621 by @user-03            0  · ·                 1d    3h█││                                            ││"
"│o ││c ││      chore(deps): bump serde from 1.0.1 to 1.0.2            █││Loading…                                    ││"
"│r ││h ││  #2609 by @user-04            0  · ·                 2w    3d█││                                            ││"
"│g ││a ││      feat: add dark mode support                            █││Changes                                     ││"
"│  ││r ││  #2607 by @user-05            0  · ·                 2y   6mo█││                                            ││"
"│  ││l ││      refactor: simplify ┌ Dependabot ────────────────────────────────────┐                                 ││"
"│  ││i ││  #2606 by @user-06       │🤖 Dependabot Commands                          │                                 ││" Hidden by multi-width symbols: [(37, " ")]
"│  ││e ││      docs: update README│                                                │                                 ││"
"│  ││  ││  #2579 by @user-07       │  r   @dependabot rebase                        │                                 ││"
"│  ││  ││      fix: resolve memory│  e   @dependabot recreate                      │                                 ││"
"│  ││  ││  #2569 by @user-08       │  m   @dependabot merge                         │                                 ││"
"│  ││  ││      test: add integrati│  s   @dependabot squash and merge              │                                 ││"
"│  ││  ││  #2563 by @user-09       │  c   @dependabot cancel merge                  │                                 ││"
"│  ││  ││      style: format code │  x   @dependabot close                         │                                 ││"
"│  ││  ││  #2548 by @user-10       │  o   @dependabot reopen                        │                                 ││"
"│  ││  ││      perf: optimize data│  i   @dependabot ignore this dependency        │                                 ││"
"│  ││  ││  #2527 by @user-11       │  I   @dependabot ignore this major version     │                                 ││"
"│  ││  ││      chore: remove unuse│  j   @dependabot ignore this minor version     │                                 ││"
"│  ││  ││  #2525 by @user-12       │  k   @dependabot ignore this patch version     │                                 ││"
"│  ││  ││      feat: implement sea│  u   @dependabot unignore *                    │                                 ││"
"│  ││  ││  #2517 by @user-13       │                                                │                                 ││"
"│  ││  ││      bugfix: handle null│Press any other key to cancel                   │                                 ││"
"│  ││  ││  #2511 by @user-14       └────────────────────────────────────────────────┘                                 ││"
"│  ││  ││      refactor: extract service layer                        ║││                                            ││"
"│  ││  ││  #2490 by @dependabot[bot]    0  · ·                 2w    3d║││                                            ││"
"│  ││  ││      docs: add contributing guidelines                      ║││                                            ││"
"│  ││  ││  #2452 by @user-15            0  · ·                 2y   6mo║││                                            ││"
"│  ││  ││      test: fix flaky unit tests                             ║││                                            ││"
"│  ││  ││  #2447 by @user-16            0  · ·                 3h   45m║││                                            ││"
"│  ││  ││      feat: add logging middleware                           ║││                                            ││"
"│  ││  ││  #2436 by @user-17            0  · ·                 3d    1d║││                                            ││"
"│  ││  ││      fix: correct timezone handling                         ║│└────────────────────────────────────────────┘│"
"└──┘└──┘└ f·page  p·prs (30)  i·issues ────────────────────────────────▼└──────────────────────────────────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
