tests/snapshots/render__detail_frontpage.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌──┐┌ repo-charlie ────────────────────────────────────────────────────────────────────────────────────────────────▲"
"│ ││ ││A tiny Rust service that does absolutely nothing, on purpose. NoOps as a Service.                             █"
"│o ││r ││                                                                                                              █"
"│c ││e ││# noop-svc                                                                                                    █"
"│t ││p ││                                                                                                              █"
"│o ││o ││[🖼 Crate Badge] [🖼 Docs Badge] [🖼 CI Badge] [🖼 License Badge]                                                 █"
"│- ││- ││                                                                                                              █"
"│o ││c ││noop-svc is NoOps, as a Service. Point any client at it and every request gets a fast, predictable `200 OK`   █"
"│r ││h ││and an empty body. No handlers to write, no state to manage, nothing to break. It's the backend you get when  █"
"│g ││a ││you don't need a backend yet.                                                                                 █"
"│  ││r ││                                                                                                              █"
"│  ││l ││## Table of Contents                                                                                          █"
"│  ││i ││                                                                                                              █"
"│  ││e ││• [Quickstart]                                                                                                █"
"│  ││  ││• [Documentation]                                                                                             █"
"│  ││  ││• [Examples]                                                                                                  █"
"│  ││  ││• [Contributing]                                                                                              ║"
"│  ││  ││• [License]                                                                                                   ║"
"│  ││  ││## Quickstart                                                                                                 ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││Add the crate to your project:                                                                                ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││cargo add noop-svc                                                                                            ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││A minimal server looks like this:                                                                             ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││use noop_svc::Server;                                                                                         ║"
"│  ││  ││                                                                                                              ║"
"│  ││  ││#[tokio::main]                                                                                                ║"
"│  ││  ││async fn main() -> anyhow::Result<()> {                                                                       ║"
"│  ││  ││    Server::bind("0.0.0.0:8080")                                                                              ║"
"│  ││  ││        .respond_with_nothing()                                                                               ║"
"│  ││  ││        .serve()                                                                                              ║"
"│  ││  ││        .await                                                                                                ║"
"│  ││  ││}                                                                                                             ║"
"│  ││  ││                                                                                                              ║"
"└──┘└──┘└ f·page  p·prs  i·issues ─────────────────────────────────────────────────────────────────────────────────────▼"
" o open  y copy URL  C clone  ? help                                                                                    "
