tests/snapshots/render__detail_issue_list.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌  octo-org  ────────────────────────────────────────────────────┐┌ octo-org-image #184 ───────────────────────────┐"
"│ ││  #    Title                                                    ││feat: implement search functionality            │"
"│o ││▶ octo-org-image #184 feat: implement search f… @user-37     2y││Loading…                                        │"
"│c ││  octo-org #2610 Fix panic when list is empty   @user-30     1d││                                                │"
"│t ││   Type: Enhancement                                          ││                                                │"
"│o ││  octo-org-textarea #27 bugfix: handle null po… @user-38    45m││                                                │"
"│- ││  repo-foxtrot #232 refactor: extract service … @user-39     3h││                                                │"
"│o ││  repo-lima #104 docs: add contributing guidel… @user-40     1d││                                                │"
"│r ││  octo-org-website #1152 test: fix flaky unit … @user-36     3d││                                                │"
"│g ││   enhancement                                                ││                                                │"
"│  ││  octo-org-website #1147 feat: add logging mid… @user-41     2w││                                                │"
"│  ││  repo-lima #101 fix: correct timezone handling @user-42    6mo││                                                │"
"│  ││  repo-lima #99 chore: update CI configuration  @user-42     2y││                                                │"
"│  ││  octo-org #2556 Add keyboard navigation to si… @user-31     3d││                                                │"
"│  ││   Type: Bug                                                  ││                                                │"
"│  ││  octo-org-website #1144 refactor: clean up le… @user-43    45m││                                                │"
"│  ││  octo-org #2547 chore(deps): bump serde from … @user-10     2w││                                                │"
"│  ││  octo-org-website #1142 Fix panic when list i… @user-44     3h││                                                │"
"│  ││  repo-oscar #179 Add keyboard navigation to s… @user-45     1d││                                                │"
"│  ││  octo-org #2526 feat: add dark mode support    @user-32    6mo││                                                │"
"│  ││  repo-hotel #200 chore(deps): bump serde from… @user-46     3d││                                                │"
"│  ││   enhancement                                                ││                                                │"
"│  ││  octo-org-image #164 feat: add dark mode supp… @user-47     2w││                                                │"
"│  ││  octo-org-image #158 refactor: simplify auth … @user-48    6mo││                                                │"
"│  ││  octo-org #2521 refactor: simplify auth flow   @user-33     2y││                                                │"
"│  ││   Type: Enhancement                                          ││                                                │"
"│  ││  octo-org #2502 docs: update README with inst… @user-06    45m││                                                │"
"│  ││  octo-org #2500 fix: resolve memory leak in c… @user-16     3h││                                                │"
"│  ││   Type: Enhancement                                          ││                                                │"
"│  ││  repo-oscar #175 docs: update README with ins… @user-49     2y││                                                │"
"│  ││   bug                                                        ││                                                │"
"│  ││  repo-oscar #171 fix: resolve memory leak in … @user-36    45m││                                                │"
"│  ││   enhancement                                                ││                                                │"
"│  ││  repo-oscar #170 test: add integration tests … @user-49     3h││                                                │"
"│  ││  octo-org #2458 test: add integration tests f… @user-34     1d││                                                │"
"│  ││   Type: Enhancement                                          ││                                                │"
"│  ││  repo-oscar #168 style: format code with rust… @user-50     1d││                                                │"
"│  ││  octo-org-textarea #9 perf: optimize database… @user-51     3d││                                                │"
"└──┘└ r·repos  p·prs  i·issues (30) ─────────────────────────────────┘└────────────────────────────────────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
