tests/snapshots/render__detail_issues.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌──┐┌ octo-org/repo-charlie ───────────────────────────────────────┐┌ Issue #2610 ─────────────────────────────────┐"
"│ ││ ││  #    Title                                                  ││Fix panic when list is empty                  │"
"│o ││r ││▶ #2610 Fix panic when list is empty          @user-30     1d││ Type: Enhancement                          │"
"│c ││e ││   Type: Enhancement                                        ││Loading…                                      │"
"│t ││p ││  #2556 Add keyboard navigation to sidebar    @user-31     3d││                                              │"
"│o ││o ││   Type: Bug                                                ││                                              │"
"│- ││- ││  #2547 chore(deps): bump serde from 1.0.1 t…@user-10     2w ││                                              │"
"│o ││c ││  #2526 feat: add dark mode support           @user-32    6mo││                                              │"
"│r ││h ││  #2521 refactor: simplify auth flow          @user-33     2y││                                              │"
"│g ││a ││   Type: Enhancement                                        ││                                              │"
"│  ││r ││  #2502 docs: update README with installatio…@user-06    45m ││                                              │"
"│  ││l ││  #2500 fix: resolve memory leak in cache     @user-16     3h││                                              │"
"│  ││i ││   Type: Enhancement                                        ││                                              │"
"│  ││e ││  #2458 test: add integration tests for API   @user-34     1d││                                              │"
"│  ││  ││   Type: Enhancement                                        ││                                              │"
"│  ││  ││  #2448 style: format code with rustfmt       @user-35     3d││                                              │"
"│  ││  ││   Type: Enhancement                                        ││                                              │"
"│  ││  ││  #2421 perf: optimize database queries       @user-36     2w││                                              │"
"│  ││  ││   Type: Bug   Effort: Good First Issue                   ││                                              │"
"│  ││  ││  #2419 chore: remove unused dependencies     @user-19    6mo││                                              │"
"│  ││  ││   Type: Enhancement                                        ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"│  ││  ││                                                              ││                                              │"
"└──┘└──┘└ f·page  p·prs  i·issues (11) ────────────────────────────────┘└──────────────────────────────────────────────┘"
" o open  y copy URL  / filter  S sort  ? help                                                                           "
