tests/snapshots/render__detail_pr_list.snap
---
source: tests/render.rs
expression: terminal.backend()
---
"┌──┐┌  @octocat  ────────────────────────────────────────────────────┐┌ repo-zulu-2 #3460 ─────────────────────────────┐"
"│ ││                                      ±                    ││chore: remove unused dependencies               │"
"│@ ││▶ repo-zulu-2 #3460 by @octo…    0  · ·                45m   45m││@octocat                                        │"
"│o ││      chore: remove unused dependencies                        ││  Overview   Activity   Commits   Checks   │"
"│c ││  repo-alpha-3 #889 by @octo…    0  · ·                 1d    3h││┌  Overview ──────────────────────────────────┐│"
"│t ││      feat: implement search functionality                     │││Summary                                       ││"
"│o ││  repo-alpha-3 #872 by @octo…    1  · ·                 2w    3d│││                                              ││"
"│c ││      bugfix: handle null pointer exception                    │││Loading…                                      ││"
"│a ││  repo-uniform-2 #222 by @oc…    0  · ·                6mo   6mo│││                                              ││"
"│t ││      refactor: extract service layer                          │││Changes                                       ││"
"│  ││  repo-bravo-3 #65 by @octoc…    0  · ·                 2y    2y│││                                              ││"
"│  ││      docs: add contributing guidelines                        │││Loading…                                      ││"
"│  ││  repo-charlie-3 #32 by @oct…    2  · ·                 3h   45m│││                                              ││"
"│  ││      test: fix flaky unit tests                               │││Checks                                        ││"
"│  ││  repo-uniform-2 #219 by @oc…    0  · ·                 1d    1d│││                                              ││"
"│  ││      feat: add logging middleware                             │││Loading…                                      ││"
"│  ││  repo-uniform-2 #216 by @oc…    0  · ·                 2w    3d│││                                              ││"
"│  ││      fix: correct timezone handling                           │││                                              ││"
"│  ││  repo-kilo-2 #82 by @octocat    2  · ·                 2y   6mo│││                                              ││"
"│  ││      chore: update CI configuration                           │││                                              ││"
"│  ││  repo-tango-2 #13 by @octoc…    4  · ·                 3h   45m│││                                              ││"
"│  ││      refactor: clean up legacy code                           │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                │││                                              ││"
"│  ││                                                                ││└──────────────────────────────────────────────┘│"
"└──┘└ r·repos  p·prs (10)  i·issues ─────────────────────────────────┘└────────────────────────────────────────────────┘"
" space select  ^a select all  v approve  m merge  u rebase  C checkout  c comment  d diff  o open  y copy URL  ? help   "
